<resources>
    <string name="app_name">Pdf reader clean architecture</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Majestic reader</string>
    <string name="nav_header_title">Majestic Reader</string>
    <string name="nav_header_subtitle">The best reader in town</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_library">Library</string>
    <string name="menu_reader">Reader</string>

    <string name="document_preview">Document preview</string>
    <string name="bookmark">Bookmark</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="page_navigation_format">Page: %1$d / %2$d</string>
    <string name="page_bookmark_format">Page %1$d</string>
    <string name="bookmarks">Bookmarks</string>
</resources>
